# luna-test-task

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
alembic/: env.py
alembic/versions/: 20260531_0001_initial_migration.py
src/payments_processor/: main.py
src/payments_processor/actions/: __init__.py  payment_action.py
src/payments_processor/configs/: __init__.py  app_config.py  consumer_config.py  outbox_dispatcher_config.py  pg_config.py  rmq_config.py  webhook_config.py
src/payments_processor/constants/: __init__.py  payments_constants.py
src/payments_processor/consumer/: main.py
src/payments_processor/database/: base.py
src/payments_processor/di/: __init__.py  broker_provider.py  consumer_provider.py  http_client_provider.py  messaging_provider.py  outbox_provider.py  payment_provider.py  pg_config_provider.py  rmq_config_provider.py  sqlalchemy_provider.py  webhook_provider.py
src/payments_processor/enums/: __init__.py  currency_enum.py  outbox_status_enum.py  payment_status_enum.py  processing_outcome_enum.py
src/payments_processor/error_handlers/: error_handler.py
src/payments_processor/errors/: __init__.py  auth_errors.py  payment_errors.py  payments_errors.py  unhandled_integrity_error.py  webhook_errors.py
src/payments_processor/messaging/: __init__.py  __main__.py  publishers.py  retry_headers.py  topology.py
src/payments_processor/middlewares/: __init__.py  api_key_middleware.py
src/payments_processor/models/: __init__.py  outbox_model.py  payment_model.py
src/payments_processor/outbox_dispatcher/: main.py
src/payments_processor/repositories/: __init__.py  outbox_repository.py  payment_repository.py
src/payments_processor/routers/: __init__.py  api_health_router.py  payment_router.py  ping_pong_router.py  worker_health_router.py
src/payments_processor/schemas/: __init__.py  event_schemas.py  payment_schemas.py  webhook_schemas.py
src/payments_processor/services/: __init__.py  outbox_service.py  payment_service.py  processing_service.py  webhook_service.py
src/payments_processor/utils/: __init__.py  base_repository.py  crypto.py  handle_integrity_helpers.py  health_state.py  ssrf_guard.py  track_api_key_header.py  uuid7.py
tests/: conftest.py
tests/integration/: _helpers.py  conftest.py  test_auth.py  test_consumer.py  test_create_payment.py  test_get_payment.py  test_idempotency.py  test_outbox_dispatcher.py
tests/unit/: conftest.py
tests/unit/error_handlers/: test_error_handler.py
tests/unit/messaging/: test_retry_headers.py
tests/unit/middlewares/: test_api_key_middleware.py
tests/unit/routers/: test_api_health_router.py  test_worker_health_router.py
tests/unit/services/: test_payment_service.py  test_processing_service.py  test_webhook_service.py
tests/unit/utils/: test_crypto.py  test_health_state.py  test_ssrf_guard.py  test_uuid7.py
